changed blue color, fixed li items being too long and interacting strangely with hover

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -17,6 +17,7 @@
   padding: 0;
 }
 .markdown li {
+  display: table;
   &:hover {
     &:before {
       color: var(--color-link-hover);
