--- a/styles/custom-properties.css
+++ b/styles/custom-properties.css
@@ -6,7 +6,7 @@
   --color-white: #fff;
   --color-yellow: #f9e248;
   --color-pink: #dd03c4;
-  --color-blue: #6ab9f0;
+  --color-blue: #3852fa;
 
   --color-link-hover: var(--color-blue);
 
